[#69565] Fix "Check all" truncation in Workflows

--- a/frontend/src/global_styles/content/work_packages/_workflows.sass
+++ b/frontend/src/global_styles/content/work_packages/_workflows.sass
@@ -51,21 +51,6 @@
         max-width: 220px
         @include text-shortener
 
-    thead
-      th
-        padding: 0 6px
-      .workflow-table--header
-        text-align: right
-        display: flex
-        span
-          flex-basis: 50%
-      .workflow-table--check-all
-        font-size: 12px
-        font-style: italic
-        text-transform: none
-        a:hover
-          text-decoration: underline
-
     .generic-table--sort-header-outer:hover
       background: none
 
